--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/LabInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/LabInfoStepUserControl.xaml
@@ -7,6 +7,9 @@
              xmlns:viewmodels="clr-namespace:Germadent.Rma.App.ViewModels"
              xmlns:properties="clr-namespace:Germadent.Rma.App.Properties"
              xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
+             xmlns:controls="clr-namespace:Germadent.UI.Controls;assembly=Germadent.UI"
+             xmlns:wizard="clr-namespace:Germadent.Rma.App.Views.Wizard"
+             xmlns:catalogs="clr-namespace:Germadent.Rma.App.ViewModels.Wizard.Catalogs"
              mc:Ignorable="d" 
              d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=designMock:DesignMockLaboratoryInfoWizardStepViewModel, IsDesignTimeCreatable=True}">
@@ -17,12 +20,11 @@
                 <Setter Property="HorizontalAlignment" Value="Right"/>
                 <Setter Property="Margin" Value="0,6,0,0"/>
             </Style>
-
-            <Style TargetType="{x:Type Border}" BasedOn="{StaticResource InfoTextBorderStyle}"/>
         </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" MinWidth="210" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="50" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -34,28 +36,78 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0" Grid.Column="0"  >
-            <TextBlock Text="Заказчик" Margin="0,0,0,1"/>
+        <Border Grid.Row="0" Grid.Column="0" Style="{StaticResource InfoTextBorderStyle}">
+            <TextBlock Text="Заказчик" Margin="0,1,0,0"/>
         </Border>
-        <TextBox Grid.Row="0" Grid.Column="1" Margin="6,0,0,0"
-                 Text="{Binding Customer, UpdateSourceTrigger=PropertyChanged}" />
+        <controls:AutoCompleteTextBox Grid.Row="0" Grid.Column="1" Margin="6,0,0,0"
+                                      Text="{Binding Customer, UpdateSourceTrigger=PropertyChanged}" 
+                                      DisplayMember="DisplayName"
+                                      Provider="{Binding CustomerSuggestionProvider}">
+            <controls:AutoCompleteTextBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type viewmodels:CustomerViewModel}">
+                    <wizard:CustomerUserControl />
+                </DataTemplate>
+            </controls:AutoCompleteTextBox.ItemTemplate>
+        </controls:AutoCompleteTextBox>
 
-        <Border Grid.Row="1" Grid.Column="0" Margin="0,6,0,0">
-            <TextBlock Text="ФИО доктора" Margin="0,0,0,1"/>
+        <Button Grid.Column="2" Grid.Row="0" Margin="6,0,0,0" Content="..."
+                ToolTip="Открыть справочник заказчиков"
+                Command="{Binding SelectCustomerCommand}"/>
+
+        <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="6,6,0,0">
+            <Button Content="Добавить заказчика"
+                    Command="{Binding AddCustomerCommand}"/>
+            <Button Content="Карточка заказчика" Margin="6,0,0,0"
+                    Command="{Binding ShowCustomerCardCommand}"/>
+            <StackPanel Orientation="Horizontal" Margin="12,0,0,0"
+                        Visibility="{Binding IsNewCustomer, Converter={StaticResource BoolToVisibilityConverter}}">
+                <Path Style="{StaticResource InfoIconPathStyle}"/>
+                <TextBlock Text="Отсутствует в справочнике" VerticalAlignment="Center" Margin="3,0,0,0"/>
+            </StackPanel>
+        </StackPanel>
+
+        <Border Grid.Row="2" Grid.Column="0" Margin="0,6,0,0" Style="{StaticResource InfoTextBorderStyle}">
+            <TextBlock Text="ФИО доктора" Margin="0,1,0,0"/>
         </Border>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="6,6,0,0"
-                     Text="{Binding DoctorFio, UpdateSourceTrigger=PropertyChanged}" />
+        <controls:AutoCompleteTextBox Grid.Row="2" Grid.Column="1" Margin="6,6,0,0"
+                                      Text="{Binding ResponsiblePerson, UpdateSourceTrigger=PropertyChanged}" 
+                                      DisplayMember="FullName"
+                                      Provider="{Binding ResponsiblePersonsSuggestionsProvider}">
+            <controls:AutoCompleteTextBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type catalogs:ResponsiblePersonViewModel}">
+                    <wizard:ResponsiblePersonUserControl />
+                </DataTemplate>
+            </controls:AutoCompleteTextBox.ItemTemplate>
+        </controls:AutoCompleteTextBox>
 
-        <Border Grid.Row="2" Grid.Column="0" Margin="0,6,0,0">
-            <TextBlock Text="ФИО пациента" Margin="0,0,0,1"/>
+        <Button Grid.Row="2" Grid.Column="2" Margin="6,6,0,0" Content="..." 
+                ToolTip="Открыть справочник ответственных лиц"
+                Command="{Binding SelectResponsiblePersonCommand}"/>
+
+        <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal" Margin="6,6,0,0">
+            <Button Content="Добавить доктора"
+                    Command="{Binding AddResponsiblePersonCommand}"/>
+            <Button Content="Карточка доктора" Margin="6,0,0,0"
+                    Command="{Binding ShowResponsiblePersonCardCommand}"/>
+            <StackPanel Orientation="Horizontal" Margin="12,0,0,0"
+                        Visibility="{Binding IsNewCustomer, Converter={StaticResource BoolToVisibilityConverter}}">
+                <Path Style="{StaticResource InfoIconPathStyle}"/>
+                <TextBlock Text="Отсутствует в справочнике" VerticalAlignment="Center" Margin="3,0,0,0"/>
+            </StackPanel>
+        </StackPanel>
+
+        <Border Grid.Row="4" Grid.Column="0" Margin="0,6,0,0">
+            <TextBlock Text="ФИО пациента" Margin="0,1,0,0"/>
         </Border>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="6,6,0,0"
-                     Text="{Binding PatientFio, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox Grid.Row="4" Grid.Column="1" Margin="6,6,0,0"
+                 Text="{Binding PatientFio, UpdateSourceTrigger=PropertyChanged}" />
 
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="Пол" />
-        <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
+        <TextBlock Grid.Row="5" Grid.Column="0" Text="Пол" />
+        <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal" Margin="6,6,0,0">
             <RadioButton Content="М" GroupName="sex"
                              IsChecked="{Binding Gender, Converter={StaticResource EnumToBoolConverter}, ConverterParameter={x:Static models:Gender.Male}}"/>
             <RadioButton Content="Ж" Margin="6,0,0,0" GroupName="sex"
@@ -65,19 +117,19 @@
                          Text="{Binding Age, UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="4" Text="Дата и время поступления"/>
-        <DatePicker Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Margin="6,6,0,0" Width="150"
+        <TextBlock Grid.Row="6" Grid.Column="0" Text="Дата и время поступления"/>
+        <DatePicker Grid.Row="6" Grid.Column="1" HorizontalAlignment="Left" Margin="6,6,0,0" Width="150"
                         SelectedDate="{Binding Created}" SelectedDateFormat="Short" />
 
-        <TextBlock Grid.Column="0" Grid.Row="5" Text="Дата примерки"/>
-        <DatePicker Grid.Row="5" Grid.Column="1" HorizontalAlignment="Left" Margin="6,6,0,0" Width="150"
-                        SelectedDate="{Binding FittingDate}" SelectedDateFormat="Short" />
-        <TextBlock Grid.Column="0" Grid.Row="6" Text="Дата сдачи"/>
-        <DatePicker Grid.Row="6" Grid.Column="1" HorizontalAlignment="Left" Margin="6,6,0,0" Width="150"
+        <TextBlock Grid.Row="7" Grid.Column="0" Text="Дата примерки"/>
+        <DatePicker Grid.Row="7" Grid.Column="1" HorizontalAlignment="Left" Margin="6,6,0,0" Width="150"
+                    SelectedDate="{Binding FittingDate}" SelectedDateFormat="Short" />
+        <TextBlock Grid.Row="8" Grid.Column="0" Text="Дата сдачи"/>
+        <DatePicker Grid.Row="8" Grid.Column="1" HorizontalAlignment="Left" Margin="6,6,0,0" Width="150"
                         SelectedDate="{Binding DateOfCompletion}" SelectedDateFormat="Short" />
 
-        <TextBlock Grid.Column="0" Grid.Row="7" Text="Комментарий"/>
-        <TextBox Grid.Column="1" Grid.Row="7" Margin="6,6,0,0" Text="{Binding DateComment, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBlock Grid.Column="0" Grid.Row="9" Text="Комментарий"/>
+        <TextBox Grid.Column="1" Grid.Row="9" Margin="6,6,0,0" Text="{Binding DateComment, UpdateSourceTrigger=PropertyChanged}"/>
 
     </Grid>
 </UserControl>
