Прокопипастил логирование, разрешил юзеру самому сортировать список заказ-нарядов

--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
@@ -63,7 +63,7 @@
                   EnableRowVirtualization="True"
                   CanUserDeleteRows="False"
                   CanUserAddRows="False"
-                  CanUserReorderColumns="False"
+                  CanUserReorderColumns="True"
                   CanUserResizeColumns="True"
                   CanUserResizeRows="False"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
