Отображение ценовых групп

--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MouthUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MouthUserControl.xaml
@@ -13,7 +13,7 @@
         </DataTemplate>
     </UserControl.Resources>
 
-    <Grid DataContext="{Binding ToothCard}">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
