--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.xaml
@@ -19,6 +19,7 @@
                 <ResourceDictionary Source="pack://application:,,,/Germadent.UI;component/Theme/TextBoxDictionary.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/Germadent.UI;component/Theme/TextBlockDictionary.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/Germadent.UI;component/Theme/DatePickerDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Germadent.UI;component/Theme/TabControlDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <convertersUI:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
@@ -39,6 +40,8 @@
             <Style TargetType="{x:Type ListBox}" BasedOn="{StaticResource StlnListBoxStyle}"/>
             <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource StlnTextBoxStyle}"/>
             <Style TargetType="{x:Type DatePicker}" BasedOn="{StaticResource StlnDatePickerStyle}"/>
+            <Style TargetType="{x:Type TabControl}" BasedOn="{StaticResource stlnTabControlStyle}"/>
+            <Style TargetType="{x:Type TabItem}" BasedOn="{StaticResource MainTabItemStyle}"/>
             <Style TargetType="{x:Type TextBlock}">
                 <Style.Triggers>
                     <Trigger Property="IsEnabled" Value="False">
