--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/PriceListEditorWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/PriceListEditorWindow.xaml
@@ -5,8 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Germadent.Rma.App.Views"
         mc:Ignorable="d"
-        Title="Редактирование прайслистов" Height="450" Width="800"
+        Title="Редактирование прайслистов" 
+        MinHeight="450"
+        Height="700"
+        MinWidth="800"
+        Width="800"
         Background="{x:Static SystemColors.ControlBrush}"
+        ShowInTaskbar="False"
         WindowStartupLocation="CenterOwner">
     <Grid>
         <Grid.RowDefinitions>
