--- a/src/Germadent.UserManagementCenter.App/Views/RolesView.xaml
+++ b/src/Germadent.UserManagementCenter.App/Views/RolesView.xaml
@@ -23,7 +23,7 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <controls:SearchComboBox Grid.Row="0" LabelText="Поиск ролей" />
+            <controls:SearchComboBox Grid.Row="0" LabelText="Поиск ролей" Height="23"/>
 
             <ListBox Grid.Row="1" Margin="0,6,0,0"
                      ItemsSource="{Binding Roles}"
@@ -31,7 +31,7 @@
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="{x:Type viewModels:RoleViewModel}">
                         <Grid Margin="3,0,3,0">
-                            <TextBlock Grid.Row="1" Text="{Binding Name}"/>
+                            <TextBlock Text="{Binding Name}"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
@@ -54,7 +54,7 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <controls:SearchComboBox Grid.Row="0" LabelText="Поиск прав" />
+            <controls:SearchComboBox Grid.Row="0" LabelText="Поиск прав" Height="23" />
 
             <ListBox Grid.Row="1" Margin="0,6,0,0"
                      ItemsSource="{Binding Rights}"
